--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>To Do List</title>
-  </head>
-  <body>
+
+<head>
+  <meta charset="utf-8">
+  <title>To Do List</title>
+</head>
+
+<body>
 
   <h1> <%= kindOfDay %> </h1>
 
+  <ul>
+    <% for (var i=0; i<newListItems.length; i++) { %>
+    <li> <%= newListItems[i] %> </li>
+    <% } %>
 
-  </body>
+
+
+  </ul>
+
+  <form action="/" method="post">
+
+    <input type="text" name="newItem">
+
+    <button type="submit" name="button">Add</button>
+
+  </form>
+
+
+</body>
+
 </html>
